[gd_scene load_steps=8 format=2]

[ext_resource path="res://Imagens/Boss.png" type="Texture" id=1]
[ext_resource path="res://Script_Boss.gd" type="Script" id=2]
[ext_resource path="res://Imagens/Explosao.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 140.246

[sub_resource type="Animation" id=4]
resource_name = "Morrendo"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Esplosao:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 0, 0 ), Rect2( 96, 104, 40, 40 ), Rect2( 184, 72, 128, 103 ), Rect2( 347, 32, 215, 176 ), Rect2( 587, 32, 216, 180 ), Rect2( 100, 244, 180, 179 ), Rect2( 364, 244, 179, 179 ), Rect2( 612, 251, 165, 165 ), Rect2( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Corpo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Movendo"
length = 2.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Corpo:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 72.0, 144.0, 216.0, 288.0, 360.0, 360.0, 288.0, 216.0, 144.0, 72.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Corpo:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Corpo:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 72.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Corpo:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Esplosao:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 184, 72, 128, 103 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Corpo:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Node2D" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Corpo" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( -0.5, 0 )
rotation = 1.25664
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="Area2D"]

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
autoplay = "Movendo"
anims/Morrendo = SubResource( 4 )
anims/Movendo = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Esplosao" type="Sprite" parent="Area2D"]
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 184, 72, 128, 103 )

[connection signal="area_entered" from="Area2D" to="Area2D" method="Acerto_Dano"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="Ataque_Personagem"]
[connection signal="timeout" from="Area2D/Timer" to="Area2D" method="Peao_Recarregado"]
[connection signal="animation_finished" from="Area2D/AnimationPlayer" to="Area2D" method="Fim_Animacao"]
